created DeleteFilesService with tests BETA